--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "daisyui": "^4.5.0",
     "nuxt": "^3.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11"
@@ -30,13 +31,16 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.16",
     "cypress": "^13.6.1",
     "eslint": "^8.49.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.33",
     "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
