--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "test:e2e": "cypress run",
+    "test:e2e:dev": "cypress open",
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "ci:lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --max-warnings=0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
@@ -24,7 +24,9 @@
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^6.0.1",
     "@rushstack/eslint-patch": "^1.3.3",
+    "@tailwindcss/typography": "^0.5.10",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
@@ -39,7 +41,6 @@
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.33",
     "prettier": "^3.0.3",
-    "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
