--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,24 +25,23 @@ jobs:
         run: npm install
     
   qa:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
       - name: Run linter
-        needs: build
         run: npm run ci:lint
 
       - name: Type check
-        needs: build
         run: npm run type-check
 
-      -name: Run security audit
-        needs: build
+      - name: Run security audit
         run: npm audit
 
   tests: 
+    needs: build
     runs-on: ubuntu-latest
 
+    steps:
       - name: Run e2e tests
-        needs: build
         run: npm run test:e2e
