--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ci:lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --max-warnings=0"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia/nuxt": "^0.5.1",
     "daisyui": "^4.5.0",
     "nuxt": "^3.9.0",
@@ -40,7 +41,6 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.33",
-    "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
