--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia/nuxt": "^0.5.1",
     "daisyui": "^4.5.0",
+    "markdown-it": "^14.0.0",
     "nuxt": "^3.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11"
